# hlidskjalf

./: CMakeLists.txt  README.md  memory.md
example/: computations.comp  schema.info
example/magma/: printentries.m  readfromdb.m  workscript.m
example/sh/: run.sh
huginn-0d0382dcb672780a/: 13.data  19.data  22.data
huginn-4db73a41d4201e3a/: 1.data  2.data  4.data  5.data
huginn-7b8ee80b28b91f96/: 23.data  24.data  25.data
huginn-8e185e7d6522b9ef/: 10.data  11.data  12.data  13.data  6.data  8.data  9.data
magma/: hliðskjálflayer.m
sh/: compile.sh
source/: computation.h  computationrunner.h  computationtemplate.h  csv.h  csvreader.h  csvschema.h  db.h  exception.h  hash.h  hliðskjálf.cpp  interactivecontroller.h  interactiveui.h  memorymanager.h  parameters.h  stdincludes.h  streamui.h  synchronizedcomputations.h  system.h  ui.h  workerthread.h  yggdrasill.cpp
source/tui/: layout.h  screen.h  screenlock.h  window.h
test/: CMakeLists.txt  runworkscript.cmake  runyggdrasill.cmake  testcsv.ok  testschema.ok  timeoutworkscript.ok  updatedbomits.ok  workscript.ok  yggdrasillomits.ok
test/computations/: test.comp
test/db.ok/: 1  db4.ok  db8.ok
test/script/: testcomputation.info  testschema.info  timeoutworkscript.m  workscript.m
test/sh/: test.sh
test/source/: computation.cpp  csv.cpp  output.h  schema.cpp
test/workoutput/: test.work
